Fix search result images breaking out of container. Fix #44

--- a/_sass/_screen.scss
+++ b/_sass/_screen.scss
@@ -1429,6 +1429,10 @@ nav ul {
     clear: both;
 }
 
+.search-result img {
+    max-width: 100%;
+}
+
 /* @end */
 
 /* @group ----- Items/Browse ----- */
